refactor: Remove obsolete include from main layout
This commit removes an unused `<include>` for `@layout/top_bar` from the `activity_main.xml` layout file.

Additionally, it adds the ID `@+id/main` to the root `RelativeLayout` and removes an obsolete `android:layout_below` attribute that was referencing a now-deleted element.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,18 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
+    android:id="@+id/main"
     tools:context=".ui.screens.MainActivity">
-
-    <!-- סרגלים עליונים -->
-    <include layout="@layout/top_bar" />
 
     <!-- תוכן עיקרי של המסך (רשימות, מידע, התראות) -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/rl_tops_all"
         android:layout_above="@+id/bottomActionMenu">
-
         <include layout="@layout/main_screen" />
     </RelativeLayout>
 
