--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -11,23 +11,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#FFFFFF"
-        android:paddingVertical="5dp">
+        android:paddingTop="8dp">
 
         <android.widget.SearchView
             android:id="@+id/mainSearchView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="0dp"
-            android:background="@drawable/sty_3"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="12dp"
+            android:elevation="4dp"
+            android:padding="12dp"
+            android:background="@drawable/search_background"
+            android:textColorHint="@color/secondaryText"
+            android:textColor="@color/primaryText"
+            android:textSize="16sp"
             android:contextClickable="true"
             android:queryHint="הקלד מוצר" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_marginBottom="12dp"
             android:layout_weight="6.0">
 
             <ImageView
