refactor: Use layout_alignParentEnd in activity_main.xml
This commit updates the layout file `activity_main.xml` to replace the `layout_alignParentRight` attribute with `layout_alignParentEnd`.

This change ensures better support for right-to-left (RTL) layouts.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/iv_backToMain"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_above="@+id/bottomActionMenu"
         android:layout_marginHorizontal="10dp"
         android:contentDescription="@string/back_to_main_activity"
