Make iv_backToMain visibility gone

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
     <!-- כפתור חזרה מתפריט חיפוש -->
     <ImageView
         android:id="@+id/iv_backToMain"
+        android:visibility="gone"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
