--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -8,24 +8,15 @@
     android:background="@color/primary"
     tools:context=".ui.screens.ProductCreationActivity">
     <!-- כותרת עליונה - כתומה (חיפוש עצמי) -->
-    <RelativeLayout
-        android:id="@+id/topBar"
-        android:visibility="visible"
-        android:background="@color/orange"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
 
-        <ImageView
-            android:id="@+id/backBtn"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/round_arrow_right_white" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/topBar"
+        android:background="@color/primary">
 
         <TextView
-            app:drawableLeftCompat="@drawable/ic_baseline_search_24_white"
-            app:drawableStartCompat="@drawable/ic_baseline_search_24_white"
+            app:drawableStartCompat="@drawable/ic_baseline_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="חיפוש עצמי"
@@ -33,27 +24,31 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:paddingVertical="2.5dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/sty_ss"
+            android:textColor="@color/primaryText"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/moveToCustomProductActivity"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+        <ImageButton
+            android:id="@+id/backBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_baseline_food_bank_24_white" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/back"
+            android:padding="8dp"
+            android:src="@drawable/round_arrow_back_24"
+            />
     </RelativeLayout>
+
     <!-- מסך "יצירת מוצר חדש" (אתר) -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/transparent"
         android:layout_below="@id/topBar">
 
         <WebView
         android:id="@+id/webview"
-        android:background="#FDB72A"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -69,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="#00FFFFFF"
+                android:background="@android:color/transparent"
                 android:padding="0dp">
 
                 <!-- כפתור לפתיחת כרטיסיית חיפוש עצמי (כתום) -->
@@ -79,7 +74,7 @@
                     android:layout_height="40dp"
                     android:layout_margin="8dp"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
                     android:background="@drawable/circle_orang"
                     android:contentDescription="@string/show_add_product_dialog"
                     android:src="@drawable/baseline_arrow_drop_up_white"
