--- a/app/src/main/res/drawable/calories_product_item_display.xml
+++ b/app/src/main/res/drawable/calories_product_item_display.xml
@@ -17,6 +17,7 @@
         android:bottom="2dp"/>
 
 <!--    <solid android:color="#FFC400"/>-->
-    <solid android:color="#26036CF6"/>
+    <!--    <solid android:color="#26036CF6"/>-->
+    <solid android:color="@color/tertiary"/>
 
 </shape>
