refactor: Reorganize colors.xml and add new dialog colors
This commit reorganizes the `colors.xml` file by moving the `error` and `success` colors to a more logical position.

Additionally, it introduces two new colors for dialogs:
*   `dialogBackground` (`#CFD8FF`)
*   `dialogBorder` (`#E0E0E0`)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,17 @@
     <color name="primaryText">#1A1A1A</color>
     <color name="secondaryText">#666666</color>
     <color name="tertiaryText">#999999</color>
-    <color name="error">#FF0000</color>
-    <color name="success">#00FF00</color>
 
     <color name="primary">#FFFFFF</color>
+
     <color name="secondary">#F1F1F1</color>
     <color name="tertiary">#036CF6</color>
 
+    <color name="dialogBackground">#CFD8FF</color>
+    <color name="dialogBorder">#E0E0E0</color>
+
+    <color name="error">#FF0000</color>
+    <color name="success">#00FF00</color>
 
     <color name="selfSearch">#E6FFA63A</color>
     <color name="delete">#FF6262</color>
