refactor: Reorder night theme colors and add dialog colors
This commit reorganizes the `colors.xml` file for the night theme.

The `error` and `success` colors have been moved to the end of the file for better organization. Additionally, new colors for dialogs, `dialogBackground` and `dialogBorder`, have been added.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,13 +3,16 @@
     <color name="primaryText">#F8F8F8</color>
     <color name="secondaryText">#ADADAD</color>
     <color name="tertiaryText">#7E7E7E</color>
-    <color name="error">#FF0000</color>
-    <color name="success">#00FF00</color>
 
     <color name="primary">#000000</color>
     <color name="secondary">#2A2A2A</color>
     <color name="tertiary">#015FE0</color>
 
+    <color name="dialogBackground">#0D0D0D</color>
+    <color name="dialogBorder">#2A2A2A</color>
+
+    <color name="error">#FF0000</color>
+    <color name="success">#00FF00</color>
 
     <color name="selfSearch">#E6FFA63A</color>
     <color name="delete">#FF6262</color>
