--- a/app/src/main/res/layout/custom_unit_selector.xml
+++ b/app/src/main/res/layout/custom_unit_selector.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:background="@drawable/sty_spinner_background"
-    >
+    android:background="@drawable/sty_spinner_background">
 
     <Spinner
         android:id="@+id/spinner_unit"
@@ -37,6 +37,7 @@
         android:contentDescription="ערוך מדדים"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="4dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:tint="@color/primaryText" />
 
 </LinearLayout>
